@@ -30,7 +30,7 @@ public class SolverStatistics
 {
 
 	public static class MetricsData {
-		// Metrics for doDynamic()
+		// Metrics for instrumentClassFiles()
 		int dyn_method_count = 0;
 		int dyn_bb_count = 0;
 		int dyn_instr_count = 0;
@@ -58,42 +58,25 @@ public class SolverStatistics
 	// threadMapping maps a threadId to its respective local data
 	private static ConcurrentHashMap<Long, MetricsData> threadMapping = new ConcurrentHashMap<Long, MetricsData>();
 
+	private static void instrumentClassFiles(File in_dir, File out_dir){
+		String filelist[] = in_dir.list();
 
-	// FIXME the following is not working since it is infromation
-	// collected when instrumenting the class. Which means it won't be
-	// acessible when running the instrumented code.
+		for (int i = 0; i < filelist.length; i++) {
+			String filename = filelist[i];
+			if (filename.endsWith(".class")) {
+				String in_filename = in_dir.getAbsolutePath() + System.getProperty("file.separator") + filename;
+				String out_filename = out_dir.getAbsolutePath() + System.getProperty("file.separator") + filename;
+				ClassInfo ci = new ClassInfo(in_filename);
+				for (Enumeration e = ci.getRoutines().elements(); e.hasMoreElements(); ) {
+					Routine routine = (Routine) e.nextElement();
+					routine.addBefore(SolverStatistics.class.getSimpleName(), "dynMethodCount", Integer.valueOf(0));
 
-	private static int bb_count; // number of instrumented basic blocks
-
-	public static void printUsage()
-	{
-		System.out.println("Syntax: java SolverStatistics in_path [out_path]");
-		System.out.println("        in_path:  directory from which the class files are read");
-		System.out.println("        out_path: directory to which the class files are written");
-		System.out.println("        Both in_path and out_path are required unless stat_type is static");
-		System.out.println("        in which case only in_path is required");
-		System.exit(-1);
-	}
-
-	public static void doDynamic(File in_dir, File out_dir){
-	String filelist[] = in_dir.list();
-
-	for (int i = 0; i < filelist.length; i++) {
-		String filename = filelist[i];
-		if (filename.endsWith(".class")) {
-			String in_filename = in_dir.getAbsolutePath() + System.getProperty("file.separator") + filename;
-			String out_filename = out_dir.getAbsolutePath() + System.getProperty("file.separator") + filename;
-			ClassInfo ci = new ClassInfo(in_filename);
-			for (Enumeration e = ci.getRoutines().elements(); e.hasMoreElements(); ) {
-				Routine routine = (Routine) e.nextElement();
-				routine.addBefore("SolverStatistics", "dynMethodCount", new Integer(1));
-
-				for (Enumeration b = routine.getBasicBlocks().elements(); b.hasMoreElements(); ) {
-					BasicBlock bb = (BasicBlock) b.nextElement();
-					bb.addBefore("SolverStatistics", "dynInstrCount", new Integer(bb.size()));
+					for (Enumeration b = routine.getBasicBlocks().elements(); b.hasMoreElements(); ) {
+						BasicBlock bb = (BasicBlock) b.nextElement();
+						bb.addBefore(SolverStatistics.class.getSimpleName(), "dynInstrCount", Integer.valueOf(bb.size()));
+					}
 				}
-			}
-				ci.write(out_filename);
+					ci.write(out_filename);
 			}
 		}
 	}
@@ -133,24 +116,26 @@ public class SolverStatistics
 		threadMapping.get(threadId).clear();
 	}
 
+	private static void printUsage()
+	{
+		System.out.println("Syntax: java SolverStatistics in_path out_path");
+		System.out.println("        in_path:  directory from which the class files are read");
+		System.out.println("        out_path: directory to which the class files are written");
+		System.exit(-1);
+	}
+
 	public static void main(String argv[])
 	{
 		if (argv.length != 2 ) {
 			printUsage();
 		}
 
-		try {
-			File in_dir = new File(argv[0]);
-			File out_dir = new File(argv[1]);
+		File in_dir = new File(argv[0]);
+		File out_dir = new File(argv[1]);
 
-			if (in_dir.isDirectory() && out_dir.isDirectory()) {
-				doDynamic(in_dir, out_dir);
-			} else {
-				printUsage();
-			}
-
-		} catch (NullPointerException e) {
-			e.printStackTrace();
+		if (in_dir.isDirectory() && out_dir.isDirectory()) {
+			instrumentClassFiles(in_dir, out_dir);
+		} else {
 			printUsage();
 		}
 
